Docker changes: - enable NoReHashPasswordEncoder in saiku-beans.xml - switch to using docker-entrypoint.sh - start tomcat with logs going to console instead of catalina.out

--- a/saiku-server/pom.xml
+++ b/saiku-server/pom.xml
@@ -213,7 +213,7 @@
 							</execution>
 						</executions>
 						<configuration>
-							<repository>buggtb/saikuce</repository>
+							<repository>kynx/saikuce</repository>
 							<tag>${project.version}</tag>
 						</configuration>
 					</plugin>
